# humanoid-book

./: .env.example  .gitignore  =0.23.0  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SETUP.md  docusaurus.config.ts  package-lock.json  package.json  render.yaml  sidebars.ts
.github/workflows/: deploy-book.yml  deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  main.py  nixpacks.toml  requirements-base.txt  requirements.txt  run_migration.py
backend/api/: health_routes.py
backend/contracts/: database-schema.sql  qdrant-collection.json
backend/models/: embeddings.py  translation.py
backend/scripts/: generate_embeddings.py
backend/services/: gemini_service.py  qdrant_service.py  response_service.py  translation_service.py
backend/src/: main.py
docs/: intro.md  setup-services-guide.md
examples/gazebo/: README.md  warehouse_sim.launch.py
examples/ros2/talker_listener/: README.md  listener.py  package.xml  setup.py
examples/ros2/talker_listener/talker_listener/: __init__.py  talker.py
specs/001-betterauth-access-control/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-reusable-intelligence-subagents/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/intelligent-personalization-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/physical-ai-humanoid-book/: plan.md  spec.md  tasks.md
specs/physical-ai-humanoid-robotics/: plan.md  spec.md  tasks.md
src/components/: auth-client.ts
src/css/: custom.css
src/hooks/: useSkill.ts
(+133 files in other folders)
